--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,3 +1,7 @@
+p {
+	padding: 0;
+	margin: 0;
+}
 .ac {
 	color: #000;
 	font-size: 1.9rem;
@@ -10,4 +14,9 @@
 	right: 0;
 	width: 100%;
 	height: 100%;
+}
+.border-bottom {
+	padding-bottom: 2.5vw;
+	margin: 5vw auto;
+	border-bottom: 1px solid #ccc;
 }
