基本完成login页面，新增全屏，initial-scale修复

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -2,9 +2,14 @@ p {
 	padding: 0;
 	margin: 0;
 }
+body {
+	margin: 0;
+	overscroll-behavior-y: contain;
+}
+
 .ac {
 	color: #000;
-	font-size: 1.9rem;
+	font-size: 1.1rem;
 }
 .cover {
 	position: absolute;
@@ -19,4 +24,26 @@ p {
 	padding-bottom: 2.5vw;
 	margin: 5vw auto;
 	border-bottom: 1px solid #ccc;
+}
+.title {
+	padding: 0 1vw;
+	display: flex;
+	align-items: center;
+	.recommended {
+		font-size: 1.2rem;
+		font-weight: 700;
+	}
+	.square {
+		padding: 0.3rem 0.5rem;
+		font-size: 0.8rem;
+		border-radius: 2rem;
+		letter-spacing: 0.03rem;
+		border: 1px solid #ccc;
+		margin-left: auto;
+	}
+}
+
+.icon-text {
+	margin-top: 0.5rem;
+	font-size: 0.7rem;
 }
