--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -1,15 +1,8 @@
-p {
-	padding: 0;
-	margin: 0;
-}
-body {
-	margin: 0;
-	overscroll-behavior-y: contain;
-}
-
+@icon-color: #cf1100;
+@bgcolor: #e54546;
 .ac {
 	color: #000;
-	font-size: 1.1rem;
+	font-size: 5vw;
 }
 .cover {
 	position: absolute;
@@ -22,7 +15,7 @@ body {
 }
 .border-bottom {
 	padding-bottom: 2.5vw;
-	margin: 5vw auto;
+	margin: 3vw auto 5vw;
 	border-bottom: 1px solid #ccc;
 }
 .title {
@@ -30,20 +23,20 @@ body {
 	display: flex;
 	align-items: center;
 	.recommended {
-		font-size: 1.2rem;
+		font-size: 5.5vw;
 		font-weight: 700;
 	}
 	.square {
-		padding: 0.3rem 0.5rem;
-		font-size: 0.8rem;
-		border-radius: 2rem;
-		letter-spacing: 0.03rem;
+		padding: 1vw 2vw;
+		font-size: 3.7vw;
+		border-radius: 4vw;
+		letter-spacing: 0.2vw;
 		border: 1px solid #ccc;
 		margin-left: auto;
 	}
 }
 
 .icon-text {
-	margin-top: 0.5rem;
-	font-size: 0.7rem;
+	margin-top: 3.3vw;
+	font-size: 3.5vw;
 }
