--- a/src/assets/styles/find/index.less
+++ b/src/assets/styles/find/index.less
@@ -1,13 +1,11 @@
 .wrapper {
-	// padding: 0 0.1rem;
+	padding: 0 3.5vw;
 	.song-group {
 		display: flex;
-		// flex-direction: row;
-		justify-content: space-around;
+		justify-content: space-between;
 		padding: 0;
 		flex-wrap: wrap;
 		.song-list {
-			// flex: 1;
 			display: flex;
 			flex-direction: column;
 			width: 30%;
