--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -13,13 +13,13 @@
 	width: 100%;
 	height: 100%;
 }
-.border-bottom {
-	padding-bottom: 2.5vw;
+.border-bottom(@padding) {
+	padding-bottom: @padding;
 	margin: 3vw auto 5vw;
 	border-bottom: 1px solid #ccc;
 }
 .title {
-	padding: 0 1vw;
+	margin: 3.5vw 0;
 	display: flex;
 	align-items: center;
 	.recommended {
@@ -39,4 +39,19 @@
 .icon-text {
 	margin-top: 3.3vw;
 	font-size: 3.5vw;
+}
+
+.after-border-padding(@width;@rest...) {
+	&:after {
+		content: "";
+		display: block;
+		width: @width;
+		margin: @rest;
+		height: 1px;
+		border-bottom: 1px solid #ccc;
+		-webkit-transform-origin: 0 0;
+		transform-origin: 0 0;
+		-webkit-transform: scaleY(0.5);
+		transform: scaleY(0.5);
+	}
 }
