优化目录结构

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -1,5 +1,5 @@
 @icon-color: #cf1100;
-@bgcolor: #e54546;
+@bgcolor: #dc2c1f;
 .ac {
 	color: #000;
 	font-size: 5vw;
@@ -41,9 +41,9 @@
 	font-size: 3.5vw;
 }
 
-.after-border-padding(@width;@rest...) {
+.after-border-margin(@width;@rest...) {
 	&:after {
-		content: "";
+		content: '';
 		display: block;
 		width: @width;
 		margin: @rest;
