--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -72,3 +72,15 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
+.pause-rotating() {
+	animation: rotating-animation 24s linear infinite;
+	animation-play-state: paused;
+}
+@keyframes rotating-animation {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
