接入qq音乐接口；初步完成搜索功能； TODO：完善搜索页面

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -56,7 +56,7 @@
 	}
 }
 // 两行文本溢出打点 ...
-.twoLinesEllipsis {
+.twoLinesEllipsis() {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
@@ -67,7 +67,7 @@
 }
 
 // 单行文字打点
-.ellipsis {
+.ellipsis() {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
