--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -1,5 +1,6 @@
 @icon-color: #cf1100;
 @bgcolor: #dd001b;
+@qqcolor: #3cc27c;
 .ac {
 	color: #000;
 	font-size: 5vw;
@@ -56,7 +57,7 @@
 	}
 }
 // 两行文本溢出打点 ...
-.twoLinesEllipsis {
+.twoLinesEllipsis() {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
@@ -67,7 +68,7 @@
 }
 
 // 单行文字打点
-.ellipsis {
+.ellipsis() {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
